Bug 366394 - single panel doesn't adjust to primary screen correctly
Summary: single panel doesn't adjust to primary screen correctly
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: generic-multiscreen (show other bugs)
Version: master
Platform: Debian unstable Linux
: NOR major
Target Milestone: 1.0
Assignee: Marco Martin
URL:
Keywords: multiscreen
Depends on:
Blocks:
 
Reported: 2016-08-04 02:28 UTC by Sebastian Kügler
Modified: 2016-08-05 16:33 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sebastian Kügler 2016-08-04 02:28:40 UTC
Situation: I connect an external monitor to my laptop, and wish to use it as primary screen, laptop panel stays on.

Expected: the content (panel, desktop containment) moves to the external screen. When unplugging, it moves back to the laptop display.

What happens is that the desktop containment moves, but the panel gets lost. 



Reproducible: Always
Comment 1 Marco Martin 2016-08-05 16:33:28 UTC
Git commit 7dec22733fc3fa75243f8c318a21ba7c77f00ef8 by Marco Martin.
Committed on 05/08/2016 at 16:33.
Pushed by mart into branch 'master'.

less bookeeping of screen ids

don't index m_desktopContainments by screen id
that will change and will break.
also, in createcontainmentForActivity, don't return one
that is already taking another desktop view
Related: bug 366395
reviewed-by: Sebastian Kügler <sebas@kde.org>

M  +5    -4    shell/screenpool.cpp
M  +27   -21   shell/shellcorona.cpp
M  +1    -1    shell/shellcorona.h

http://commits.kde.org/plasma-workspace/7dec22733fc3fa75243f8c318a21ba7c77f00ef8