less bookeeping of screen ids

don't index m_desktopContainments by screen id
that will change and will break.
also, in createcontainmentForActivity, don't return one
that is already taking another desktop view

BUG:366394
BUG:366395
reviewed-by: Sebastian Kügler <sebas@kde.org>